force-app/main/default/objects/Appointment__c/fields/Move_Update_Appliances__c.field-meta.xml
<CustomField>
    <fullName>Move_Update_Appliances__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Move /Update Appliances</label>
    <type>Checkbox</type>
</CustomField>