force-app/main/default/objects/Appointment__c/fields/New_Cabinets_Vanity__c.field-meta.xml
<CustomField>
    <fullName>New_Cabinets_Vanity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Cabinets/Vanity</label>
    <type>Checkbox</type>
</CustomField>