force-app/main/default/objects/Appointment__c/fields/Number_of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bedrooms__c</fullName>
    <label>Number of Bedrooms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>