force-app/main/default/objects/Appointment__c/fields/Number_of_cell_phone_owners__c.field-meta.xml
<CustomField>
    <fullName>Number_of_cell_phone_owners__c</fullName>
    <label># of people with their own cell phone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>