force-app/main/default/objects/Appointment__c/fields/Number_of_Entry_Exit_Doors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Entry_Exit_Doors__c</fullName>
    <label>Number of Entry/Exit Doors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>