force-app/main/default/objects/Appointment__c/fields/Number_of_People_in_the_home__c.field-meta.xml
<CustomField>
    <fullName>Number_of_People_in_the_home__c</fullName>
    <label>Number of People in the home</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>