force-app/main/default/objects/Appointment__c/fields/Number_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rooms__c</fullName>
    <label>Number of Rooms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>