force-app/main/default/objects/Appointment__c/fields/Number_of_Windows__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Windows__c</fullName>
    <label>Number of Windows</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three to Five</fullName>
            </value>
            <value>
                <fullName>Six to Nine</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>