force-app/main/default/objects/Appointment__c/fields/Number_of_Windows_for_Repair__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Windows_for_Repair__c</fullName>
    <label>Number of Windows for Repair</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>