force-app/main/default/objects/Appointment__c/fields/Occupancy_of_House__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_of_House__c</fullName>
    <label>Occupancy of House</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Furnished and Occupied</fullName>
            </value>
            <value>
                <fullName>Furnished and Unoccupied</fullName>
            </value>
            <value>
                <fullName>Unfurnished and Unoccupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>