force-app/main/default/objects/Appointment__c/fields/of_walls_that_need_shelving_storage__c.field-meta.xml
<CustomField>
    <fullName>of_walls_that_need_shelving_storage__c</fullName>
    <label># of walls that need shelving/storage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>