force-app/main/default/objects/Appointment__c/fields/Other_Decision_Maker_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Other_Decision_Maker_Email_Address__c</fullName>
    <formula>Person_Account__r.Homeowner_2_Email__c</formula>
    <label>Other Decision Maker Email Address</label>
    <type>Text</type>
</CustomField>