force-app/main/default/objects/Appointment__c/fields/Other_Decision_Maker_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Decision_Maker_Last_Name__c</fullName>
    <formula>Person_Account__r.Homeowner_2_Last_Name__c</formula>
    <label>Other Decision Maker Last Name</label>
    <type>Text</type>
</CustomField>