force-app/main/default/objects/Appointment__c/fields/Other_Decision_Maker_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Other_Decision_Maker_Mobile__c</fullName>
    <formula>Person_Account__r.Homeowner_2_Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Decision Maker Mobile</label>
    <type>Text</type>
</CustomField>