force-app/main/default/objects/Appointment__c/fields/Other_Decision_Maker_Phone_Number_f__c.field-meta.xml
<CustomField>
    <fullName>Other_Decision_Maker_Phone_Number_f__c</fullName>
    <formula>Person_Account__r.Homeowner_2_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Decision Maker Phone Number</label>
    <type>Text</type>
</CustomField>