force-app/main/default/objects/Appointment__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Industry__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointments (Industry)</relationshipLabel>
    <relationshipName>Appointments_Industry</relationshipName>
    <type>Lookup</type>
</CustomField>