force-app/main/default/objects/Appointment__c/fields/Pest_loose_in_backyard__c.field-meta.xml
<CustomField>
    <fullName>Pest_loose_in_backyard__c</fullName>
    <label>Pest loose in backyard?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>