force-app/main/default/objects/Appointment__c/fields/Post_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Post_Assignment_Status__c</fullName>
    <label>Post Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Sent</fullName>
                <default>true</default>
                <label>Not Yet Sent</label>
            </value>
            <value>
                <fullName>Appointment Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>