force-app/main/default/objects/Appointment__c/fields/Pre_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Pre_Assignment_Status__c</fullName>
    <label>Pre Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Assign</fullName>
                <default>true</default>
                <label>Pending Assign</label>
            </value>
            <value>
                <fullName>Ready to Assign</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>RS No Date</fullName>
            </value>
            <value>
                <fullName>No Pro</fullName>
            </value>
            <value>
                <fullName>NQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>