force-app/main/default/objects/Appointment__c/fields/Pre_plumbing__c.field-meta.xml
<CustomField>
    <fullName>Pre_plumbing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-plumbing</label>
    <type>Checkbox</type>
</CustomField>