force-app/main/default/objects/Appointment__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Rekey</fullName>
            </value>
            <value>
                <fullName>Pest</fullName>
            </value>
            <value>
                <fullName>Weed</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Energy Efficiencies</fullName>
            </value>
            <value>
                <fullName>Service Existing System</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Replace Existing Windows</fullName>
            </value>
            <value>
                <fullName>Repair Existing Window Glass</fullName>
            </value>
            <value>
                <fullName>Blinds/Shades</fullName>
            </value>
            <value>
                <fullName>Wood Shutters</fullName>
            </value>
            <value>
                <fullName>Vertical Blinds</fullName>
            </value>
            <value>
                <fullName>Electric Blind/Shade Opener</fullName>
            </value>
            <value>
                <fullName>Sprinkler System</fullName>
            </value>
            <value>
                <fullName>Grass</fullName>
            </value>
            <value>
                <fullName>Trees/Shrubs</fullName>
            </value>
            <value>
                <fullName>Drainage System</fullName>
            </value>
            <value>
                <fullName>Wood Structure(s), Deck(s), Gazebo(s), etc</fullName>
                <label>Wood Structure(s), Deck(s), etc</label>
            </value>
            <value>
                <fullName>Concrete Patio/Walkway, etc</fullName>
            </value>
            <value>
                <fullName>Masonry/Brick/Stone work</fullName>
            </value>
            <value>
                <fullName>Fencing</fullName>
            </value>
            <value>
                <fullName>Retaining wall</fullName>
            </value>
            <value>
                <fullName>Landscape lighting</fullName>
            </value>
            <value>
                <fullName>Pool/Spa</fullName>
            </value>
            <value>
                <fullName>Storage Shed</fullName>
            </value>
            <value>
                <fullName>Built in BBQ</fullName>
            </value>
            <value>
                <fullName>Pergola</fullName>
            </value>
            <value>
                <fullName>Firepit Gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>