force-app/main/default/objects/Appointment__c/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <label>Were you pleased with our original call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_HS</valueSetName>
    </valueSet>
</CustomField>