force-app/main/default/objects/Appointment__c/fields/Replace_Existing_Patio_Walkway__c.field-meta.xml
<CustomField>
    <fullName>Replace_Existing_Patio_Walkway__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replace Existing Patio/Walkway</label>
    <type>Checkbox</type>
</CustomField>