force-app/main/default/objects/Appointment__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review</label>
    <referenceTo>review__c</referenceTo>
    <relationshipLabel>Appointment</relationshipLabel>
    <relationshipName>Appointment</relationshipName>
    <type>Lookup</type>
</CustomField>