force-app/main/default/objects/Appointment__c/fields/Rooms_included_in_project__c.field-meta.xml
<CustomField>
    <fullName>Rooms_included_in_project__c</fullName>
    <label>Rooms included in project</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bathroom(s)</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Bedroom(s)</fullName>
            </value>
            <value>
                <fullName>Garage</fullName>
            </value>
            <value>
                <fullName>Living/Family Room</fullName>
            </value>
            <value>
                <fullName>Laundry Room</fullName>
            </value>
            <value>
                <fullName>Deck</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rooms_Included_in_Project</fullName>
                <isActive>false</isActive>
                <label>Rooms_Included_in_Project</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>