force-app/main/default/objects/Appointment__c/fields/Rooms_to_be_Installed__c.field-meta.xml
<CustomField>
    <fullName>Rooms_to_be_Installed__c</fullName>
    <label>Rooms to be Installed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Living Room</fullName>
            </value>
            <value>
                <fullName>Dining Room</fullName>
            </value>
            <value>
                <fullName>Family Room</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Hallway(s)</fullName>
            </value>
            <value>
                <fullName>Stairs/Landing</fullName>
            </value>
            <value>
                <fullName>Entryway</fullName>
            </value>
            <value>
                <fullName>Bedroom(s)</fullName>
            </value>
            <value>
                <fullName>Bathroom(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>