force-app/main/default/objects/Appointment__c/fields/Show_tub_combo_conversion_to_shower__c.field-meta.xml
<CustomField>
    <fullName>Show_tub_combo_conversion_to_shower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show tub combo conversion to shower</label>
    <type>Checkbox</type>
</CustomField>