force-app/main/default/objects/Appointment__c/fields/Shutters__c.field-meta.xml
<CustomField>
    <fullName>Shutters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shutters</label>
    <type>Checkbox</type>
</CustomField>