force-app/main/default/objects/Appointment__c/fields/Solar__c.field-meta.xml
<CustomField>
    <fullName>Solar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solar</label>
    <type>Checkbox</type>
</CustomField>