force-app/main/default/objects/Appointment__c/fields/Solar_Type__c.field-meta.xml
<CustomField>
    <fullName>Solar_Type__c</fullName>
    <label>Solar Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Energy Efficiency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>