force-app/main/default/objects/Appointment__c/fields/Sq_Ft_of_Project_Area__c.field-meta.xml
<CustomField>
    <fullName>Sq_Ft_of_Project_Area__c</fullName>
    <label>Sq Ft of Project Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under 500</fullName>
            </value>
            <value>
                <fullName>500-1000</fullName>
            </value>
            <value>
                <fullName>1000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>