force-app/main/default/objects/Appointment__c/fields/Square_Footage_to_be_cleaned__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage_to_be_cleaned__c</fullName>
    <label>Square Footage to be cleaned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>