force-app/main/default/objects/Appointment__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>TEXT(Person_Account__r.State__c)</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>