force-app/main/default/objects/Appointment__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <formula>Person_Account__r.Street__c</formula>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>