force-app/main/default/objects/Appointment__c/fields/Sub_Categories__c.field-meta.xml
<CustomField>
    <fullName>Sub_Categories__c</fullName>
    <label>Sub-Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows &amp; Doors</fullName>
            </value>
            <value>
                <fullName>Blinds &amp; Shutters</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Garage Organization</fullName>
            </value>
            <value>
                <fullName>Garage Floor Coating</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Landscape Design</fullName>
            </value>
            <value>
                <fullName>Pool Install</fullName>
            </value>
            <value>
                <fullName>Kitchen &amp; Bath</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Garage Door</fullName>
            </value>
            <value>
                <fullName>Handy Man</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>