force-app/main/default/objects/Appointment__c/fields/Timeline_of_Intent__c.field-meta.xml
<CustomField>
    <fullName>Timeline_of_Intent__c</fullName>
    <label>Timeline of Intent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>15 Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>45+ Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>