force-app/main/default/objects/Appointment__c/fields/Type_of_Floor__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Floor__c</fullName>
    <label>Type of Floor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Stone</fullName>
            </value>
            <value>
                <fullName>Carpet</fullName>
            </value>
            <value>
                <fullName>Waterproof Vinyl</fullName>
            </value>
            <value>
                <fullName>Wood Laminate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>