force-app/main/default/objects/Appointment__c/fields/Type_of_Material__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Material__c</fullName>
    <label>Type of Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asphalt</fullName>
            </value>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Flat, Foam, Single Ply</fullName>
            </value>
            <value>
                <fullName>Wood Shake Composite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>