force-app/main/default/objects/Appointment__c/fields/Type_of_Material_on_Current_Door__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Material_on_Current_Door__c</fullName>
    <label>Type of Material on Current Door</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Steel</fullName>
            </value>
            <value>
                <fullName>Aluminum</fullName>
            </value>
            <value>
                <fullName>Vinyl</fullName>
            </value>
            <value>
                <fullName>Fiberglass</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>