force-app/main/default/objects/Appointment__c/fields/Type_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Service__c</fullName>
    <label>Type of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Exterior</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Stone</fullName>
            </value>
            <value>
                <fullName>Carpet</fullName>
            </value>
            <value>
                <fullName>Waterproof Vinyl</fullName>
            </value>
            <value>
                <fullName>Wood Laminate</fullName>
            </value>
            <value>
                <fullName>Rock</fullName>
            </value>
            <value>
                <fullName>Grass</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Smooth</fullName>
            </value>
            <value>
                <fullName>Rough</fullName>
            </value>
            <value>
                <fullName>Roll Up</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
            <value>
                <fullName>Ground level addition</fullName>
            </value>
            <value>
                <fullName>Second story addition</fullName>
            </value>
            <value>
                <fullName>Detached</fullName>
            </value>
            <value>
                <fullName>Shelving</fullName>
            </value>
            <value>
                <fullName>Drawers</fullName>
            </value>
            <value>
                <fullName>Cabinets</fullName>
            </value>
            <value>
                <fullName>Hanging Storage</fullName>
            </value>
            <value>
                <fullName>Deadbolt</fullName>
            </value>
            <value>
                <fullName>Keyless Entry</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Satellite</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Laminate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>