force-app/main/default/objects/Appointment__c/fields/Type_of_System_to_be_installed__c.field-meta.xml
<CustomField>
    <fullName>Type_of_System_to_be_installed__c</fullName>
    <label>Type of System to be installed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shelving</fullName>
            </value>
            <value>
                <fullName>Drawers</fullName>
            </value>
            <value>
                <fullName>Cabinets</fullName>
            </value>
            <value>
                <fullName>Hanging Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>