force-app/main/default/objects/Appointment__c/fields/Type_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Work__c</fullName>
    <label>Type of Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replace/New</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>