force-app/main/default/objects/Appointment__c/fields/Types_of_Pets__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Pets__c</fullName>
    <label>Types of Pets</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Dog(s)</fullName>
            </value>
            <value>
                <fullName>Cat(s)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>