force-app/main/default/objects/Appointment__c/fields/Update_Add_Cabinets_Shelving__c.field-meta.xml
<CustomField>
    <fullName>Update_Add_Cabinets_Shelving__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update/Add Cabinets/Shelving</label>
    <type>Checkbox</type>
</CustomField>