force-app/main/default/objects/Appointment__c/fields/Update_Replace_Countertops__c.field-meta.xml
<CustomField>
    <fullName>Update_Replace_Countertops__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update/Replace Countertops</label>
    <type>Checkbox</type>
</CustomField>