force-app/main/default/objects/Appointment__c/fields/Update_Replace_Flooring__c.field-meta.xml
<CustomField>
    <fullName>Update_Replace_Flooring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update/Replace Flooring</label>
    <type>Checkbox</type>
</CustomField>