force-app/main/default/objects/Appointment__c/fields/Update_Replace_Garage_Door__c.field-meta.xml
<CustomField>
    <fullName>Update_Replace_Garage_Door__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update/Replace Garage Door(s)</label>
    <type>Checkbox</type>
</CustomField>