force-app/main/default/objects/Appointment__c/fields/Update_Replace_Lighting__c.field-meta.xml
<CustomField>
    <fullName>Update_Replace_Lighting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update/Replace Lighting</label>
    <type>Checkbox</type>
</CustomField>